# portfolio-website

./: .gitignore  Cargo.toml  README.md  _routes.json  build.rs  build.sh  package-lock.json  package.json  tailwind.config.js  wrangler.jsonc
.github/workflows/: deploy.yml
.wrangler/tmp/bundle-RT7xgz/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-zNKbnx/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-zeXAek/: z67xvdga2yo.js  z67xvdga2yo.js.map
.wrangler/tmp/pages-93HCxv/: bundledWorker-0.5662846597351734.mjs  bundledWorker-0.5662846597351734.mjs.map  z67xvdga2yo.js  z67xvdga2yo.js.map
site/: _routes.json  _worker.js  index_bg.js
site/pkg/: index.js  index_bg.wasm  rust-leptos-portfolio.css
src/: app.rs  lib.rs  main.rs
src/components/: mod.rs  sidebar_left.rs  sidebar_right.rs  theme_switcher.rs
src/pages/: background.rs  contact.rs  home.rs  mod.rs  projects.rs  resume.rs
style/: tailwind.css
