[package]
name = "rust-leptos-portfolio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = [] }
leptos_router = { version = "0.7", features = [] }
leptos_meta = { version = "0.7", features = [] }
leptos_axum = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element", "DomTokenList", "Storage", "Navigator", "Clipboard"], optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:web-sys",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",

    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "rust-leptos-portfolio"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
