[package]
name = "rust-leptos-portfolio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["ssr"]

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["hydrate"]

[dependencies]
leptos = { version = "0.7", features = [] }
leptos_router = { version = "0.7", features = [] }
leptos_meta = { version = "0.7", features = [] }
leptos_axum = { version = "0.7", default-features = false, optional = true }
axum = { version = "0.7", default-features = false, optional = true, features = ["macros"] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element", "DomTokenList", "Storage", "Navigator", "Clipboard"], optional = true }

worker = { version = "0.4", features = ["http"] }
worker-macros = { version = "0.4", features = ["http"] }
async-trait = "0.1.79"
js-sys = "0.3.69"
tower = "0.4.13"
getrandom = { version = "0.2", features = ["js"] }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:web-sys",
]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 's'
lto = true
strip = true
codegen-units = 1
